# sdf_geo

./: README.md  pyproject.toml  setup.py
prism/: collision_test.py  interference.py  operations.py  primitives.py  test_script.py  visualization.py
quadrotor_trajopt_outputs/2025-08-17_14.56.56.575320/: ipopt_output.txt  modopt_results.out
quadrotor_trajopt_outputs/2025-08-17_16.28.10.266765/: ipopt_output.txt  modopt_results.out
sdf_geometry/: core.py  operations.py  primitives.py  test_script.py  test_script.py.py  visualization.py
sdf_geometry.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
