[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-sdf"
version = "0.1.0"
description = "Composable Signed Distance Functions (SDFs) for geometric modeling and optimization"
authors = [
    { name="Soliman Villapando", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "numpy",
    "matplotlib"
]
